--- a/404.html
+++ b/404.html
@@ -14,24 +14,24 @@ It's a good idea to keep this template as minimal as possible in terms of both f
     <link rel="stylesheet" type="text/css" href="/assets/built/screen.css" />
     <link rel="stylesheet" type="text/css" href="/assets/built/screen.edited.css" />
     <!-- This tag outputs SEO meta+structured data and other important settings -->
-    <meta name="description" content="달팽이기관차의 블로그입니다." />
-    <link rel="shortcut icon" href="http://localhost:4000/assets/built/images/favicon.jpg" type="image/png" />
-    <link rel="canonical" href="http://localhost:4000/404.html" />
+    <meta name="description" content="테크 블로그입니다." />
+    <link rel="shortcut icon" href="https://houngkyung-kim.github.io/assets/built/images/favicon.jpg" type="image/png" />
+    <link rel="canonical" href="https://houngkyung-kim.github.io/404.html" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
 
      <!--title below is coming from _includes/dynamic_title-->
     <meta property="og:site_name" content="Snailtrain's Blog" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="404 - Page Not Found" />
-    <meta property="og:description" content="달팽이기관차의 블로그입니다." />
-    <meta property="og:url" content="http://localhost:4000/404.html" />
-    <meta property="og:image" content="http://localhost:4000/assets/built/images/blog-cover1.jpg" />
+    <meta property="og:description" content="테크 블로그입니다." />
+    <meta property="og:url" content="https://houngkyung-kim.github.io/404.html" />
+    <meta property="og:image" content="https://houngkyung-kim.github.io/assets/built/images/blog-cover1.jpg" />
     <meta property="article:publisher" content="https://www.facebook.com/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="404 - Page Not Found" />
-    <meta name="twitter:description" content="달팽이기관차의 블로그입니다." />
-    <meta name="twitter:url" content="http://localhost:4000/" />
-    <meta name="twitter:image" content="http://localhost:4000/assets/built/images/blog-cover1.jpg" />
+    <meta name="twitter:description" content="테크 블로그입니다." />
+    <meta name="twitter:url" content="https://houngkyung-kim.github.io/" />
+    <meta name="twitter:image" content="https://houngkyung-kim.github.io/assets/built/images/blog-cover1.jpg" />
     <meta name="twitter:label1" content="Written by" />
     <meta name="twitter:data1" content="Snailtrain's Blog" />
     <meta name="twitter:site" content="@" />
@@ -46,20 +46,20 @@ It's a good idea to keep this template as minimal as possible in terms of both f
     "publisher": {
         "@type": "Organization",
         "name": "Snailtrain's Blog",
-        "logo": "http://localhost:4000/"
+        "logo": "https://houngkyung-kim.github.io/"
     },
-    "url": "http://localhost:4000/404.html",
+    "url": "https://houngkyung-kim.github.io/404.html",
     "image": {
         "@type": "ImageObject",
-        "url": "http://localhost:4000/assets/built/images/blog-cover1.jpg",
+        "url": "https://houngkyung-kim.github.io/assets/built/images/blog-cover1.jpg",
         "width": 2000,
         "height": 666
     },
     "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "http://localhost:4000/404.html"
+        "@id": "https://houngkyung-kim.github.io/404.html"
     },
-    "description": "달팽이기관차의 블로그입니다."
+    "description": "테크 블로그입니다."
 }
     </script>
 
