--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
     <![endif]-->
     
     <!-- This tag outputs SEO meta+structured data and other important settings -->
-    <meta name="description" content="달팽이기관차의 블로그입니다." />
-    <link rel="shortcut icon" href="http://localhost:4000/assets/built/images/favicon.jpg" type="image/png" />
-    <link rel="canonical" href="http://localhost:4000/" />
+    <meta name="description" content="테크 블로그입니다." />
+    <link rel="shortcut icon" href="https://houngkyung-kim.github.io/assets/built/images/favicon.jpg" type="image/png" />
+    <link rel="canonical" href="https://houngkyung-kim.github.io/" />
     <meta name="referrer" content="no-referrer-when-downgrade" />
 
      <!--title below is coming from _includes/dynamic_title-->
     <meta property="og:site_name" content="Snailtrain's Blog" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Snailtrain's Blog" />
-    <meta property="og:description" content="달팽이기관차의 블로그입니다." />
-    <meta property="og:url" content="http://localhost:4000/" />
-    <meta property="og:image" content="http://localhost:4000/assets/built/images/blog-cover1.jpg" />
+    <meta property="og:description" content="테크 블로그입니다." />
+    <meta property="og:url" content="https://houngkyung-kim.github.io/" />
+    <meta property="og:image" content="https://houngkyung-kim.github.io/assets/built/images/blog-cover1.jpg" />
     <meta property="article:publisher" content="https://www.facebook.com/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Snailtrain's Blog" />
-    <meta name="twitter:description" content="달팽이기관차의 블로그입니다." />
-    <meta name="twitter:url" content="http://localhost:4000/" />
-    <meta name="twitter:image" content="http://localhost:4000/assets/built/images/blog-cover1.jpg" />
+    <meta name="twitter:description" content="테크 블로그입니다." />
+    <meta name="twitter:url" content="https://houngkyung-kim.github.io/" />
+    <meta name="twitter:image" content="https://houngkyung-kim.github.io/assets/built/images/blog-cover1.jpg" />
     <meta name="twitter:label1" content="Written by" />
     <meta name="twitter:data1" content="Snailtrain's Blog" />
     <meta name="twitter:site" content="@" />
@@ -78,20 +78,20 @@
     "publisher": {
         "@type": "Organization",
         "name": "Snailtrain's Blog",
-        "logo": "http://localhost:4000/"
+        "logo": "https://houngkyung-kim.github.io/"
     },
-    "url": "http://localhost:4000/",
+    "url": "https://houngkyung-kim.github.io/",
     "image": {
         "@type": "ImageObject",
-        "url": "http://localhost:4000/assets/built/images/blog-cover1.jpg",
+        "url": "https://houngkyung-kim.github.io/assets/built/images/blog-cover1.jpg",
         "width": 2000,
         "height": 666
     },
     "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "http://localhost:4000/"
+        "@id": "https://houngkyung-kim.github.io/"
     },
-    "description": "달팽이기관차의 블로그입니다."
+    "description": "테크 블로그입니다."
 }
     </script>
 
@@ -125,7 +125,7 @@ into the {body} of the default.hbs template -->
                     Snailtrain's Blog
                 
             </h1>
-            <h2 class="site-description">달팽이기관차의 블로그입니다.</h2>
+            <h2 class="site-description">테크 블로그입니다.</h2>
         </div>
         <nav class="site-nav">
     <div class="site-nav-left">
@@ -394,7 +394,7 @@ into the {body} of the default.hbs template -->
         <!-- The footer at the very bottom of the screen -->
         <footer class="site-footer outer">
             <div class="site-footer-content inner">
-                <section class="copyright"><a href="http://localhost:4000/">Snailtrain's Blog</a> &copy; 2021</section>
+                <section class="copyright"><a href="https://houngkyung-kim.github.io/">Snailtrain's Blog</a> &copy; 2021</section>
                 <section class="poweredby">Proudly published with <a href="https://jekyllrb.com/">Jekyll</a> &
                     <a href="https://pages.github.com/" target="_blank" rel="noopener">GitHub Pages</a> using
                     <a href="https://github.com/jekyller/jasper2" target="_blank" rel="noopener">Jasper2</a></section>
