Updating to houngkyung-kim/GitHubPageMaker@2fe19fa52633cde684ae1073d7d8cc44121bdbc7.

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ into the {body} of the default.hbs template -->
                 <header class="post-card-header">
                     
 
-                    <h2 class="post-card-title">Gettysburg Address</h2>
+                    <h2 class="post-card-title">게티스버그 연설</h2>
                 </header>
                 <section class="post-card-excerpt">
                     
