--- a/python-intro.html
+++ b/python-intro.html
@@ -569,7 +569,7 @@ exclude:
                 <header class="post-card-header">
                     
 
-                    <h2 class="post-card-title">Gettysburg Address</h2>
+                    <h2 class="post-card-title">게티스버그 연설</h2>
                 </header>
                 <section class="post-card-excerpt">
                     
