Updating to houngkyung-kim/GitHubPageMaker@94837034f41907e81e8923734b7d3d29cbdcd84f.

--- a/search.html
+++ b/search.html
@@ -188,6 +188,24 @@ into the {body} of the default.hbs template -->
 <script>
   window.store = {
   
+  "productivity-chrome": {
+      "title": "인생이 윤택해 지는 유용한 [ 크롬 브라우저 단축키 ] 모음",
+          "author": "houngkyung-kim",
+          "category": "",
+          "content": "사실 나는 얼마 전까지 단축키에 대해 별로 신경쓰지 않았다.“마우스가 있는데 굳이 왜 단축키를 써야할까?”원하는 버튼을 클릭하면 되는 매우 직관적인 방법을 두고 불편하게(?) 단축키를 외워야할 필요성을 느끼지 못했다.하지만 이것은 정말 엄청난 착각이었다.우연한 기회로 gmail 단축키를 사용하게 되면서 엄청난 자유로움과 해방감을 경험했다. 이를 기회로 내가 자주 쓰는 프로그램들은 무조건 단축키를 외워야겠다고 생각하게 됐다.이렇게 내가 단축키 모음 글을 쓰는 이유도 나처럼 있다는 것은 알았지만 느껴보지 못한 사람들이 단축키를 쓰게 되면서 신세계를 경험하기 바라기 때문이다.이제 사설은 그만하고 유용한 [ 크롬 브라우저 단축키 ] 를 살펴보자.주소창 커서 이동 : cmd + l새 탭 열기 : cmd + t현재 탭 끄기 : cmd + w탭 이동하기 : cmd + 숫자이전 페이지 : cmd + [다음 페이지 : cmd + ]시크릿 탭 열기 : shift _개발자 모드 열기 : shift + option + i현재 창 닫기: cmd + shift + w창 최소화: cmd + m크롬 숨기기 : cmd + h크롬 끄기: cmd + q",
+      "url": "/productivity-chrome"
+  }
+  ,
+  
+  "web-javascript": {
+      "title": "JavaScript (1) - Strings",
+          "author": "houngkyung-kim",
+          "category": "",
+          "content": "자바스크립트 String오늘은 자바스크립트에서 String에 대해 살펴봅시다.자바스크립트에서 string은 따옴표나 쌍따옴표를 통해 표현합니다.\"이것은 스트링입니다\";'이것도 스트링이죠';두 가지 경우 정확히 동일한 표현입니다. 하지만 한 가지 주의해야할 것은 ‘ 로 시작했으면 ‘ 러, “로 시작했으면 “로 끝나야 합니다.'이건 잘못된 표현입니다.\";다음으로 스트링에서 쓸 수 있는 기본적인 method을 살펴봅시다.  .length 이 method는 스트링의 길이를 반환합니다.\"apple\".length;// 5  .include(searchString)이 method는 String에 특정 String이 포함되어 있는지 확인합니다.\"apple\".include(\"ppl\"); // true\"apple\".include(\"ppa\"); // false  .toUpperCase()이 method는 영문 소문자 String을 대문자로 변환합니다.\"Banana\".toUpperCase; // \"BANANA\"  .toLowerCase()이 method는 영문 대문자 String을 소문자로 변환합니다.\"Pineapple\".toLowerCase(); // \"pineapple\"참고일반적으로 method는 함수이기 때문에 선언 시 괄호 ()가 뒤에 붙는다. 다만 length의 경우는 괄호가 없는데 내재적으로 이미 포함된 것이다.기타string.startWith(searchString)string.endsWith(searchString)string.trim()",
+      "url": "/web-javascript"
+  }
+  ,
+  
   "database-basic": {
       "title": "Database - Mongoose 기본",
           "author": "houngkyung-kim",
@@ -224,12 +242,12 @@ into the {body} of the default.hbs template -->
   }
   ,
   
-  "gettysburg-address": {
-      "title": "기술 블로그",
+  "ec-b6-94-ec-b2-9c-ec-82-ac-ec-9d-b4-ed-8a-b8-eb-b0-8f-eb-b8-94-eb-a1-9c-ea-b7-b8": {
+      "title": "추천 기술 사이트 및 블로그",
           "author": "abraham",
           "category": "",
-          "content": "빠리의택시운전사https://geonlee.tistory.com/229",
-      "url": "/gettysburg-address"
+          "content": "어쩌다 우연히 알게 되었지만, 보석같은 사이트들을 추천합니다.MDNhttps://developer.mozilla.org/ko/배달의민족 기술 블로그https://woowabros.github.io/Learn JavaScripthttps://learnjavascript.online/app.html빠리의택시운전사https://geonlee.tistory.com/229라봉이의 개발 블로그https://psyhm.tistory.com/2?category=654716동빈나https://blog.naver.com/ndb796https://velopert.comheropy.bloghttps://hyuntaeknote.tistory.com/m/10?fbclid=IwAR2Qn5SyJ5oFpO4MINErEhkJxFuO2yfZxxn0MtQNq2VB0W2iVvk6Kap0ITo",
+      "url": "/%EC%B6%94%EC%B2%9C-%EC%82%AC%EC%9D%B4%ED%8A%B8-%EB%B0%8F-%EB%B8%94%EB%A1%9C%EA%B7%B8"
   }
   
   
